adjust mission title height; fix map bounds not wrapping properly

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -156,7 +156,7 @@ ul {
   background-color: black;
   opacity: 0.8;
   position: absolute;
-  bottom: 30%;
+  bottom: 60%;
 }
 
 .mission-index-item .compensation p {
